--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,23 @@
 .App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.App input {
+  margin-top: 20px;
+  width: 300px;
+  height: 40px;
+  font-size: 20px;
+  padding-left: 10px;
+}
+
+p {
+  margin: 8px;
+  font-size: 18px;
 }
 
 .App-logo {
@@ -35,4 +53,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+#searchBar {
+  width: 100%;
+  height: 32px;
+  border-radius: 3px;
+  border: 1px solid #eaeaea;
+  padding: 5px 10px;
+  font-size: 12px;
+}
+
+#searchWrapper {
+  position: relative;
+}
+
+#searchWrapper {
+  content: 'Search...';
+  position: absolute;
+  top: 2px;
+  right: 15px;
 }
